--- a/_posts/2017-09-16-teance.md
+++ b/_posts/2017-09-16-teance.md
@@ -6,4 +6,8 @@ cover: ../assets/img/teance1.png
 
 ### Berkeley, CA
 
-We were in Berkeley for the afternoon and Joey couldn’t leave without stopping at Teance. It’s a high-end, yet relaxing, shop selling a variety of teas and supplies. They have a tasting bar and an upstairs area with tables where you can kick back with a book or some work and enjoy a pot of tea.  We went for the burnt sugar black tea, which runs $7 for a pot. They serve all tea pots with a kettle of hot water so you can refill to your heart’s desire.  I lost count of the number of cups we drank, but I left satisfied and slightly over-caffeinated.
+We were in Berkeley for the afternoon and Joey the tea-lover couldn’t leave without stopping at Teance. It’s a high-end shop selling a variety of teas and tea supplies, from handmade cups to various tea pots and steepers. 
+
+The water fountain raining down from the ceiling when you walk in and the instrumental background music create a super relaxing vibe.  They have a U-shaped tasting bar, which we checked out during our last visit, where you can order a flight of teas or sit and enjoy a pot.  This time we opted for the upstairs area that has tables where you can kick back with a book or some work while you enjoy your tea.  
+
+We came back searching for the burnt sugar black tea ($7 per pot), which our friend sampled last time.  Joey thought he didn't liked black teas, but the light and sweet flavor of this tea won him over. It stays true to its name.  I enjoyed that Teance serves all tea pots with an additional kettle of hot water, so you can refill to your heart’s desire.  I lost count of the number of cups we drank, but I left satisfied and slightly over-caffeinated. I'm sure we will be back during future East Bay Adventures!
