added cover to teance

--- a/_posts/2017-09-16-teance.md
+++ b/_posts/2017-09-16-teance.md
@@ -1,6 +1,7 @@
 ---
 published: true
-cover: ../assets/img/teance1.png
+cover: >-
+  https://lh3.googleusercontent.com/4xlQHPogVjKEzLhUacmnECPePIBx1xeVXzadGQgTPmms6lwr_5e2F3SevsEv3mJ8rfCOgG5rrMo2Hmw8uPTvdQaW2FtZmR2Lvup5s3zlV7KMFvAlUc7MOIjtdYEPGrS_3ke4fdozRA
 ---
 ## Teance
 
